# gate0

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  build_error.txt
.github/workflows/: ci.yml
examples/: complex_overrides.rs  saas_api.rs  saas_api_dsl.rs  simple.rs  zero_trust_network.rs
gatebridge/: Cargo.toml  README.md  example_policy.yaml  test_request.json
gatebridge/src/: ast.rs  lib.rs  loader.rs  shadow.rs
scripts/: analyze_shadow.py
src/: condition.rs  error.rs  fixed_stack.rs  lib.rs  macros.rs  policy.rs  stats.rs  target.rs  types.rs  value.rs
tests/: allocations.rs  properties.rs
