[package]
name = "gatebridge"
version = "0.1.0"
edition = "2021"
description = "YAML policy translator and shadow evaluator for Gate0"
license = "MIT"

[dependencies]
gate0 = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "gatebridge"
path = "src/main.rs"
